client/style.css
@import url('./reset.css');

body {
  font-family: Arial, Helvetica, sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background: rgb(218, 167, 233);
  background: linear-gradient(
    90deg,
    rgba(218, 167, 233, 1) 0%,
    rgba(242, 114, 190, 1) 39%,
    rgba(255, 134, 103, 1) 100%
  );
}

.main {
  padding: 1rem;
}

ul {
  padding: 0;
}

li {
  list-style-type: none;
}

legend {
  text-wrap: pretty;
  max-width: 85%;
  padding: 0.25rem 0.5rem;
  background-color: #dfe9fb;
  border-radius: 0.5rem;
}

button:hover {
  cursor: pointer;
}

.form-header {
  text-align: center;
}

.shadow {
  box-shadow: 0 0.5rem 0.5rem 0.25rem hsla(0, 0%, 10%, 0.05);
}

.white-container {
  background-color: white;
  border-radius: 1rem;
  padding: 1rem;
  border: 1px solid #a8a8a8;
}

.invalid-field-warning {
  box-shadow: 0 0 0.3rem 0.1rem rgba(255, 0, 0, 0.3);
  border: 0.15rem solid red !important;
}

ul.invalid-field-warning {
  box-shadow: 0 0 0.3rem 0.1rem rgba(255, 0, 0, 0.8);
  border-style: none !important;
  border-radius: 0.25rem;
}

#sign-in {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 1.5rem;
  padding: 1.5rem;
  gap: 1.5rem;
  max-width: 40rem;
  min-width: 280px;
}

#sign-in section {
  width: 100%;
}

#sign-in fieldset {
  border: 2px solid #bebebd;
  border-radius: 0.5rem;
  margin-top: 0.25rem;
  padding: 0.5rem 0.75rem;
}

.center-horizontal {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.center-vertical {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.required {
  font-weight: bold;
  color: #d60000;
}

.name-fields {
  display: flex;
  justify-content: space-between;
  width: 100%;
  gap: 1rem;
}

.personal-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 0.5rem;
}

.label-above {
  width: 100%;
}

.label-above label {
  width: 100%;
}

.label-above label input {
  width: 100%;
}

.label-above label div {
  text-wrap: nowrap;
}

.check-multiple::after {
  content: ' (check all that apply)';
}

.checkbox {
  display: grid;
  align-items: start;
  grid-template-columns: 1rem auto;
  gap: 0.5rem;
}

input[type='checkbox'] {
  appearance: none;
  background-color: #fff;
  margin: 0;
  width: 1.15rem;
  height: 1.15rem;
  border: 0.15rem solid black;
  border-radius: 0.15rem;
  transform: translateY(0.17rem);
  display: grid;
  place-content: center;
}

input[type='checkbox']::before {
  content: '';
  width: 0.65rem;
  height: 0.65rem;
  transform: scale(0);
  color: #81d185;
  background-color: #308535;
  transition: 80ms transform ease-in-out;
  transform-origin: bottom left;
  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}

input[type='checkbox']:checked::before {
  transform: scale(1);
  display: block;
}

input[type='text'],
input[type='tel'] {
  border: 0.15rem solid #222222;
  border-radius: 0.25rem;
  display: grid;
  place-content: center;
  padding: 0.25rem 0.5rem;
}

input[type='text']:focus-visible,
input[type='tel']:focus-visible {
  outline: none;
  border-color: #0070ff;
}

input[required] {
  scroll-margin-top: 2rem;
}

#liability-terms-btn {
  color: blue;
  text-decoration: underline;
  position: relative;
  z-index: 10;
  background-color: transparent;
  border: none;
  padding: 0;
  margin: 0;
}

#submit-btn {
  padding: 1rem;
  border-radius: 0.5rem;
  border: none;
  background-color: cornflowerblue;
  color: white;
  font-weight: bold;
}

#modal-overlay {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.2);
  z-index: 20;
}

#modal {
  display: flex;
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  width: 90vw;
  max-width: 800px;
  height: 90vh;
  max-height: 600px;
  background-color: white;
  border-radius: 1rem;
  padding: 2rem;
  z-index: 30;
}

.hidden {
  display: none !important;
}

#modal-content {
  display: flex;
  flex-direction: column;
}

#liability-text {
  margin-top: 1rem;
  scrollbar-gutter: stable;
  overflow-y: scroll;
  overscroll-behavior-y: none;
  flex-grow: 1;
}

#liability-text p + p {
  margin-top: 1rem;
}

#modal-checkbox-label {
  margin-top: 1rem;
}

.error-message {
  color: #cc0000;
  font-size: smaller;
}

/* TODO: mobile first, responsive design */
/* 	small: 320x640
/* 	medium: 768x1024 to 1366x768 */
/* 	large: 1440x1024 */

@media only screen and (min-width: 576px) {
}

@media only screen and (min-width: 992px) {
}

